<resources>
    <string name="app_name">800 APPELS</string>
    <string name="enseig_apprentiss"><![CDATA[Enseignement & Apprentissage(local)]]></string>
    <string name="enseign_region"><![CDATA[Enfance & Enseignement (Régional)]]></string>
    <string name="cultur_jeuness"><![CDATA[Culture & Jeunesse]]></string>
    <string name="municipalit">Municipalité</string>
    <string name="delegation">delegation</string>
    <string name="d_l_gation">Délégation</string>
    <string name="consulter_d_l_gation_d_hammam_sousse">Consulter la liste des contactes des délégation d\'hammam sousse</string>
    <string name="m_decine">Médecine</string>
    <string name="consulter_la_liste_des_contactes_m_decine">Consulter la liste des contactes médecine</string>
    <string name="administrations">Administrations</string>
    <string name="consulteradministrations_locale">Consulter la liste des contactes d\'administrations locale</string>
    <string name="etablissements_des_soins_locaux_r_gionaux_nationaux">Etablissements des soins Locaux-Régionaux-nationaux</string>
    <string name="etablissements">Etablissements</string>
    <string name="transport_services_divers"><![CDATA[Transport & Services Divers]]></string>
    <string name="consulter_la_liste_des_contactes_de_la_justice">Consulter la liste des contactes de la justice</string>
    <string name="comptabilit_fiscalit_consulting"><![CDATA[Comptabilité,Fiscalité & Consulting]]></string>
    <string name="bank">Bank</string>
    <string name="justice">justice</string>
    <string name="transport">transport</string>
    <string name="voyages">voyages</string>
    <string name="sports">sports</string>
    <string name="pharmacie">Pharmacie</string>
    <string name="administration_r_gionale">Administration régionale</string>
    <string name="park_attraction"><![CDATA[Park & attraction]]></string>
    <string name="notaire">Notaire</string>
    <string name="v_t_rinaire">Vétérinaire</string>
    <string name="optic">Optic</string>
    <string name="radio">Radio</string>
    <string name="avocat">Avocat</string>
    <string name="la_poste">La Poste</string>
    <string name="medecine_d_urgence_de_nuit_assistance_a_domicile"><![CDATA[Medecine d\'urgence,de nuit & assistance a domicile]]></string>
    <string name="pharmacy">pharmacy</string>
    <string name="veterinary">veterinary</string>
    <string name="eyeglass">eyeglass</string>
    <string name="adminstration">adminstration</string>
    <string name="culture_et_jeunesse_d_hammam_sousse">Culture et jeunesse d\'hammam sousse</string>
    <string name="consulter_la_liste_des_contactes_des_v_t_rinaires_d_hammam_sousse">Consulter la liste des contactes des vétérinaires d\'hammam sousse</string>
    <string name="consulter_la_liste_des_contactes_des_pharmacies_d_hammam_sousse">Consulter la liste des contactes des pharmacies d\'hammam sousse</string>
    <string name="huissier">Huissier</string>
    <string name="assurances">Assurances</string>
    <string name="consulterclubs_sportifs_et_associations_d_hammam_sousse">Consulter la liste des contactes des clubs sportifs et associations d\'hammam sousse</string>
    <string name="consulter_la_liste_des_contactes_des_hotels_d_hammam_sousse">Consulter la liste des contactes des hotels d\'hammam sousse</string>
    <string name="consulter_la_liste_des_contactes_des_notaires">Consulter la liste des contactes des notaires</string>
    <string name="doctoeur">doctoeur</string>
    <string name="radios">radios</string>
    <string name="hotels">hotels</string>
    <string name="parks">parks</string>
    <string name="culture">culture</string>
    <string name="law">law</string>
    <string name="assurance">assurance</string>
    <string name="communication">communication</string>
    <string name="architecture">architecture</string>
    <string name="finance">finance</string>
    <string name="caszes">caszes</string>
    <string name="courtroom">courtroom</string>
    <string name="cultures">cultures</string>
    <string name="consulteropticiens_d_hammam_sousse">Consulter la liste des contactes des opticiens d\'hammam sousse</string>
    <string name="consulter_la_liste_des_contactes_des_parks">Consulter la liste des contactes des parks</string>
    <string name="consulter_la_liste_des_contactes_des_hussiers">Consulter la liste des contactes des hussiers</string>
    <string name="consulter_la_liste_des_contactes_des_comptables">Consulter la liste des contactes des Comptables</string>
    <string name="consulter_la_liste_des_contactes_des_avocats">Consulter la liste des contactes des avocats</string>
    <string name="consulter_la_liste_des_contactes_des_architectes">Consulter la liste des contactes des architectes</string>
    <string name="liste_des_contactes_de_administrations_r_gionale">Liste des contactes de administrations régionale</string>
    <string name="municipalit_hammam_sousse">Municipalité Hammam Sousse</string>
    <string name="consulteragences_de_voyage">Consulter la liste des contactes des agences de voyage</string>
    <string name="agences_de_voyage">Agences de voyage</string>
    <string name="transport_autres_services_divers"><![CDATA[Transport & autres services divers]]></string>
    <string name="sport_association"><![CDATA[Sport & Association]]></string>
    <string name="consulter_la_liste_des_contactes_des_radios">Consulter la liste des contactes des radios</string>
    <string name="etablissement_culturel_r_gional">Etablissement Culturel Régional</string>
    <string name="achitecte">Achitecte</string>
    <string name="consulterposte_tunisienne">Consulter la liste des contactes des agences de la poste tunisienne</string>
    <string name="consulteragences_banquaires">Consulter la liste des contactes des agences banquaires</string>
    <string name="consulter_la_liste_des_contactes_des_urgences">Consulter la liste des contactes d\'urgences</string>
    <string name="hospital_building">hospital building</string>
    <string name="class_rooms">class rooms</string>
    <string name="banking">banking</string>
    <string name="uregences">uregences</string>
    <string name="police_garde_nationale">police-garde nationale-protection civile</string>
    <string name="consulter_la_liste_des_contactes_d_assurances_d_hammam_sousse">consulter la liste des contactes d\'assurances d\'hammam sousse</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="phone">phone</string>
    <string name="title_activity_presentation">PresentationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="titretxt1">Situation Géographique et cadre naturel :</string>
    <string name="_800_appels">800 APPELS</string>
    <string name="picture">Picture</string>
    <string name="_50_groupes_458_titres_815_numeros">50 GROUPES - 458 TITRES - 815 NUMEROS</string>
    <string name="meeting_point">Meeting point</string>
    <string name="hammam_sousse">Hammam Sousse</string>
    <string name="picutica">picutica</string>
    <string name="contactes">Contactes</string>
    <string name="a_propos">A propos</string>
    <string name="projet_r_alis_a_but_non_lucratif_ni_publicitaires_projet_r_alis_par_jci_hammam_sousse_en_collaboration_avec_utica_h_sousse_utss_h_sousse_et_le_comit_local_du_croissant_rouge_tunisien_pour_soutenir_les_8_coles_primaires_de_la_commune_4550_l_ves_et_pour_rapprocher_les_services_des_citoyens">Projet réalisé a but non lucratif ni Publicitaires Projet réalisé par JCI Hammam Sousse en collaboration avec UTICA H-Sousse, UTSS H- Sousse et le comité local du croissant rouge tunisien, pour soutenir les 8 écoles primaires de la commune (4550 élèves) et pour rapprocher les services des citoyens.</string>
    <string name="mppic">mppic</string>
    <string name="jcilogo1stscreen">jcilogo1stscreen</string>
    <string name="piccroissant_rouge">piccroissant rouge</string>
    <string name="heartpic">heartpic</string>
    <string name="infopic">infopic</string>
    <string name="piccontact">piccontact</string>
</resources>