<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".IntroActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/realisepar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="3dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/projet_r_alis_a_but_non_lucratif_ni_publicitaires_projet_r_alis_par_jci_hammam_sousse_en_collaboration_avec_utica_h_sousse_utss_h_sousse_et_le_comit_local_du_croissant_rouge_tunisien_pour_soutenir_les_8_coles_primaires_de_la_commune_4550_l_ves_et_pour_rapprocher_les_services_des_citoyens"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <HorizontalScrollView
            android:id="@+id/horiztonal_scrollview_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fadingEdge="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline">

            <LinearLayout
                android:id="@+id/horiztonal_outer_layout_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"></LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/background_light"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/jcilogo1stscreen"
                app:srcCompat="@drawable/jci" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/piccroissant_rouge"
                app:srcCompat="@drawable/crouge" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/picutica"
                app:srcCompat="@drawable/utica" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/realisepar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                style="@style/TextAppearance.MainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#CDAF0A"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/_50_groupes_458_titres_815_numeros"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/contacts"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bluebutton"
                android:elevation="4dp" tools:targetApi="lollipop">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/piccontact"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:srcCompat="@drawable/ic_contact_phone_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/contactes"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/googleSignInButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/whitebutton"
                android:elevation="4dp" tools:targetApi="lollipop">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/mppic"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:srcCompat="@drawable/ic_road_sign"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/meeting_point"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/hammamsoussebutton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/pinkbutton"
                android:elevation="4dp" tools:targetApi="lollipop">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/heartpic"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:srcCompat="@drawable/ic_like"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/hammam_sousse"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gallerybutton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:background="@drawable/darkbutton"
                android:elevation="4dp" tools:targetApi="lollipop">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/infopic"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:srcCompat="@drawable/ic_info_outline_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/a_propos"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

            </RelativeLayout>
        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>

